# nomad-rag

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 109d08d5b6a0_english_unaccent_ts_config_for_chunks_.py  a1b2c3d4e5f6_update_tsvector_trigger_simple_unaccent.py  dc4045f226bf_create_chunks_table.py
data/city_guides/: buenos_aires_argentina.md  florianopolis_brazil.md  medellin_colombia.md  mexico_city_mexico.md
data/cost_comparison/: four_city_rent_and_coworking_snapshot.md  medellin_vs_mexico_city.md
data/coworking/: medellin_florianopolis_reviews.md  mexico_city_buenos_aires_reviews.md
data/evaluation/: test_set.json
data/evaluation/results/: result_20260327_084350_run.json  (+1 more)
data/visa_info/: argentina_visa_options_bullets.md  latin_america_dnv_summary_table.md  mexico_visa_paths_overview.md
scripts/: compare_chunks.py  generate_data.py  generate_test_set.py  ingest.py  scorecard.py  test_graph.py  test_retrieval.py
src/: database.py
src/agent/: __init__.py  config.py  graph.py  nodes.py  prompts.py
src/api/: main.py
src/chain/: config.py  graph.py  nodes.py  prompts.py  state.py
src/config/: __init__.py  settings.py
src/evaluation/: __init__.py  metrics.py  test_set.py
src/ingestion/: __init__.py  chunking.py  loader.py  models.py  vector_store.py
src/models/: __init__.py  chat.py  documents.py  evaluation.py
src/retrieval/: __init__.py  hybrid.py  keyword_search.py  retriever.py
src/services/: __init__.py  chat.py  documents.py
(+2 files in other folders)
